--- a/signup/signup.css
+++ b/signup/signup.css
@@ -1,9 +1,17 @@
+html, body {
+  width: 100%;
+  height: 100%;
+  /* remove the extra whites around */
+  margin: 0;
+}
+
 .font{
   font-family:Crimson Text;
 }
 
 
 .logInMenu { 
-  background: linear-gradient(158.41deg, rgba(100, 100, 100, 0) 39.76%, rgba(100, 100, 100, 0.25) 62.3%, rgba(153, 65, 25, 0.76) 101.93%);
+  background:linear-gradient(143.54deg, rgba(100, 100, 100, 0) 35.58%, rgba(100, 100, 100, 0.132954) 62.67%, rgba(153, 65, 25, 0.3) 117.04%);
+  mix-blend-mode: normal;;
 }
 
