--- a/sass/dash.scss
+++ b/sass/dash.scss
@@ -123,3 +123,8 @@ $secondary: #d4c9c1;
 .form-control {
     border: 0;
 }
+
+.foot { 
+    background: linear-gradient(180deg, #E6DFD8 23.12%, #FFF6EE 75.68%);
+    mix-blend-mode: normal;
+  }
